[package]
name = "spank"
version = "1.0.0"
edition = "2024"
description = "Yells 'ow!' when you slap an Apple Silicon MacBook"
license = "MIT"
repository = "https://github.com/taigrr/spank"
readme = "README.md"
keywords = ["macos", "apple-silicon", "accelerometer", "audio", "cli"]
categories = ["command-line-utilities"]
include = [
  "src/**",
  "audio/**/*.mp3",
  "doc/logo.png",
  "README.md",
  "README-zh.md",
  "LICENSE",
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.29"
ctrlc = "3.5"
chrono = { version = "0.4", default-features = true }
include_dir = "0.7"
libc = "0.2"
rand = "0.10"
ratatui = "0.30"
rodio = { version = "0.22", default-features = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
